--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -23,18 +23,19 @@
     cursor: not-allowed;
 }
 
+/* Primary type */
 .button-primary {
-    background-color: #007bff;
+    background-color: royalblue;
+  }
+
+/* Danger type */
+.button-danger {
+    background-color: crimson;
 }
 
-.button-primary:hover {
-    background-color: #0056b3;
-}
-
-.button-secondary {
-    background-color: #6c757d;
-}
-
-.button-secondary:hover {
-    background-color: #5a6268;
+/* Ghost type */
+.button-ghost {
+    background-color: transparent;
+    border: 2px solid gray;
+    color: gray;
 }
