--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,21 +1,24 @@
 .button {
-    padding: 12px 24px;
-    background-color: #007bff;
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color: #ffffff00;
     color: white;
     border: none;
-    border-radius: 6px;
+    border: 1px solid white;
+    border-radius: 40px;
     font-weight: bold;
     cursor: pointer;
+    font-size: 1em;
     transition: background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #ffffff27;
 }
 
 .button:focus {
     outline: none;
-    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
+    background-color: #ffffff5b;
 }
 
 .button:disabled {
