--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@
   font-size: 2em;
   color: #333;
 }
+
+.timer {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 3em;
+  color: #e74c3c;
+  margin: 20px 0;
+}
