--- a/src/components/PomodoroTimer/PomodoroTimer.module.css
+++ b/src/components/PomodoroTimer/PomodoroTimer.module.css
@@ -10,7 +10,7 @@
     font-family: 'Orbitron', sans-serif;
     font-size: 3em;
     margin: 20px 0;
-    color: #e74c3c;
+    color: #515151;
 }
 
 .pomodoroTimer div {
