--- a/src/components/Quote/Quote.module.css
+++ b/src/components/Quote/Quote.module.css
@@ -1,4 +1,8 @@
 .quote {
-    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f0f0f0a1;
     font-family: "Times New Roman","Josefin Slab", sans-serif;
 }
