--- a/src/components/Wallpaper/Wallpaper.module.css
+++ b/src/components/Wallpaper/Wallpaper.module.css
@@ -1,4 +1,9 @@
 .wallpaper {
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    flex-direction: column;
+    padding-top: 60px;
     background-image: url('src/assets/images/background1.jpg');
     min-height: 100vh;
     display: flex;
