--- a/src/components/FireSoundPlayer/FireSoundPlayer.module.css
+++ b/src/components/FireSoundPlayer/FireSoundPlayer.module.css
@@ -20,7 +20,7 @@
 
 .fireIcon {
     font-size: 1.5rem;
-    color: white;
+    color: rgb(0, 0, 0);
     filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 }
 
